--- a/README.html
+++ b/README.html
@@ -5,10 +5,9 @@
 </head>
 <body>
 
-<h1 id="alzprotectjoomlatemplate">Alzprotect Joomla! Template</h1>
+<h1 id="transalleyjoomlatemplate">Transalley Joomla! Template</h1>
 
 <p>Made by Staminic (https://www.staminic.com) with Bl4nk Bootstrap Edition (https://github.com/Bloggerschmidt/Blank-Bootstrap-Edition).</p>
 
 </body>
 </html>
-
